@@ -28,4 +28,4 @@ ActivationMode=shared
 Type=OpenPart
 Icon=kdiagramm.xpm
 MiniIcon=kdiagramm.xpm
-ServiceType=KOfficeDocumen
+ServiceType=KOfficeDocument
