@@ -32,4 +32,4 @@ ActivationMode=shared
 Type=OpenPart
 Icon=unknown.xpm
 MiniIcon=unknown.xpm
-ServiceType=KOfficeDocumen
+ServiceType=KOfficeDocument
