@@ -29,4 +29,4 @@ ActivationMode=shared
 Type=OpenPart
 Icon=kpresenter.xpm
 MiniIcon=kpresenter.xpm
-ServiceType=KOfficeDocumen
+ServiceType=KOfficeDocument
