@@ -29,4 +29,4 @@ ActivationMode=shared
 Type=OpenPart
 Icon=kspread.xpm
 MiniIcon=kspread.xpm
-ServiceType=KOfficeDocumen
+ServiceType=KOfficeDocument
