@@ -729,3 +729,7 @@ Reggie, 25.1.1999:
 - Frame margins can be saved/loaded now
 - Another fix with embedded objects
 - Non-textframes can have borders too now
+
+Reggie, 26.1.1999:
+------------------
+- Added saving/loading hard frame breaks (seems that I forgot that...)
